dyn_partial_eq_derive/tests/ui/compile_errors/item-is-union.rs
use dyn_partial_eq_derive::PartialEqDyn;

#[derive(PartialEqDyn)]
union SomeUnion {
    first: i32,
    second: i8,
}

fn main() {}
